--- a/task8/CMakeLists.txt
+++ b/task8/CMakeLists.txt
@@ -13,7 +13,7 @@ project(Task4)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/lib)
 
-add_subdirectory(${CMAKE_BINARY_DIR}/../3rdparty/$ENV{GOOGLE_TEST_DIR})
+add_subdirectory(${CMAKE_BINARY_DIR}/3rdparty/$ENV{GOOGLE_TEST_DIR})
 
 
 add_subdirectory(B)
