--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,5 +16,7 @@ jobs:
           wget https://github.com/google/googletest/archive/refs/tags/release-1.11.0.tar.gz
           tar -xzf release-1.11.0.tar.gz
           cd ..  # task8
-          GOOGLE_TEST_DIR=googletest-release-1.11.0 cmake .
+          mkdir build
+          cd build
+          GOOGLE_TEST_DIR=googletest-release-1.11.0 cmake ..
           make
