--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,3 +20,8 @@ jobs:
           cd build
           GOOGLE_TEST_DIR=googletest-release-1.11.0 cmake ..
           make
+
+      - name: Test
+        uses: akhtyamovpavel/ActionGtestReport@v0.0.9
+        with:
+          who-to-greet: 'Mona the Octocat'
