step Test: passing arguments

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,4 +24,6 @@ jobs:
       - name: Test
         uses: akhtyamovpavel/ActionGtestReport@v0.0.9
         with:
-          who-to-greet: 'Mona the Octocat'
+          working-directory: task8/build
+          exec-path: ../bin/CTestExe
+          report-path: test-report
