--- a/task4/C/CMakeLists.txt
+++ b/task4/C/CMakeLists.txt
@@ -1,6 +1,12 @@
 project(C)
 
 
+add_executable(CTestExe main_test.cpp tests.cpp)
+
+target_link_libraries(CTestExe gtest_main ClassLib)
+target_include_directories(CTestExe PRIVATE ${Task4_SOURCE_DIR})
+
+
 add_executable(C main.cpp)
 
 target_link_libraries(C ClassLib)
