fetch GoogleTest as recommended in its repo

--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -13,8 +13,13 @@ project(Task4)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Task4_SOURCE_DIR}/lib)
 
-find_package(GTest CONFIG REQUIRED)
-enable_testing()
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/e2239ee6043f73722e7aa812a459f54a28552929.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
 add_subdirectory(B)
 add_subdirectory(C)
