--- a/task4/C/CMakeLists.txt
+++ b/task4/C/CMakeLists.txt
@@ -12,6 +12,9 @@ add_executable(C main.cpp)
 target_link_libraries(C ClassLib)
 target_include_directories(C PRIVATE ${Task4_SOURCE_DIR})
 
+target_link_libraries(C gtest_main)
+add_test(NAME example_test COMMAND C)
+
 INSTALL(
     TARGETS C
     RUNTIME DESTINATION exe/bin
